src/cypd.css
/* ... */
.cypd-formitem-wrapper.error {
    margin-bottom: 20px;
}

.cypd-formitem-wrapper.error>.cypd-select-wrapper,
.cypd-formitem-wrapper.error>.cypd-select-native-wrapper,
.cypd-formitem-wrapper.error>.cypd-input {
    border-color: #b92454;
}


/* cypd calendar - overwrite react-calendar */

#g__cypd_calendar_window {
    z-index: 11;
    height: 250px;
    opacity: 0;
    transition: opacity 150ms;
}

.cypd-picker-wrapper {
    /* position: relative;
    display: inline-flex;
    flex-direction: column;
    flex-wrap: wrap;
    height: 32px;
    width: 150px; */
    position: relative;
    width: 150px;
}

.cypd-picker-wrapper .cypd-icon-wrapper {
    position: absolute;
    top: 6px;
    right: 5px;
    transform: scale(0.8) !important;
}

.cypd-picker-wrapper .cypd-icon-wrapper svg * {
    stroke: rgb(109, 108, 108);
}

.cypd-picker-wrapper .cypd-input {
    cursor: text;
    color: rgb(163, 163, 163);
    width: 100%;
}

.cypd-picker-wrapper.hide .cypd-input:focus {
    box-shadow: none;
    border: 1px solid rgb(163, 163, 163);
}

.react-calendar {
    position: relative;
    width: 250px;
    border-radius: 5px;
    padding: 5px;
    margin-top: 2px;
    margin-bottom: 2px;
    background: white;
    z-index: 11;
    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
}

.react-calendar button {
    position: relative;
    background-color: transparent;
    color: #00839E;
    border: 0;
    height: 30px;
    cursor: pointer;
    transition: background-color 50ms;
}

.react-calendar button abbr {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.react-calendar button.react-calendar__tile--active,
.react-calendar button:focus,
.react-calendar button::-moz-focus-inner {
    border: none;
}

.react-calendar button.react-calendar__month-view__days__day.react-calendar__tile--active,
.react-calendar button.react-calendar__month-view__days__day:focus,
.react-calendar button.react-calendar__month-view__days__day::-moz-focus-inner {
    background-color: rgba(0, 131, 158, 0.16);
}

button.react-calendar__month-view__days__day {
    height: 0;
    padding-top: calc(100% / 7);
    border-radius: 50%;
}

button.react-calendar__century-view__decades__decade {
    height: 40px;
}

.react-calendar button:hover {
    background-color: rgba(0, 131, 158, 0.16);
}

.react-calendar__month-view__weekdays {
    background-color: #00839E;
    height: 30px;
    line-height: 30px;
    margin-top: 5px;
    margin-bottom: 5px;
}

.react-calendar__month-view__weekdays__weekday abbr {
    color: white;
    font-weight: bold;
    text-decoration: none;
}

.cypd-digital-clock-wrapper {
    position: relative;
    display: inline-flex;
    flex-direction: row;
    width: 170px;
}

.cypd-digital-clock-wrapper .cypd-input {
    position: absolute;
    width: 100%;
    z-index: 1;
    color: rgb(163, 163, 163);
}

.cypd-digital-clock-wrapper .cypd-input:hover {
    cursor: text;
}

.cypd-digital-clock-wrapper .cypd-select-wrapper {
    margin-right: -1px;
}

.cypd-digital-clock-wrapper .cypd-select {
    visibility: hidden;
}

.cypd-digital-clock-wrapper .cypd-options-container {
    margin-top: 1px;
    box-shadow: none;
    background-color: white;
    min-width: 40px;
}

.cypd-digital-clock-wrapper .cypd-options-container .cypd-option label {
    text-overflow: clip;
}

.cypd-digital-clock-wrapper.clock-system .cypd-select-wrapper.meridiem .cypd-options-container {
    height: 200px;
    transition-delay: 0s;
}

.cypd-digital-clock-wrapper.clock-system .cypd-select-wrapper.meridiem .cypd-options-container,
.cypd-digital-clock-wrapper .cypd-select-wrapper.hr .cypd-options-container {
    border-radius: 3px 0 0 3px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
}

.cypd-digital-clock-wrapper.clock-system .cypd-select-wrapper.hr .cypd-options-container,
.cypd-digital-clock-wrapper .cypd-select-wrapper.min .cypd-options-container {
    border-radius: 0;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
}

.cypd-digital-clock-wrapper .cypd-select-wrapper.sec .cypd-options-container {
    border-radius: 0 3px 3px 0;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
}

.cypd-digital-clock-wrapper .cypd-icon-wrapper {
    position: absolute;
    width: 0;
    top: 6px;
    right: 20px;
    z-index: 1;
    transform: scale(0.8) !important;
}

.cypd-digital-clock-wrapper .cypd-icon-wrapper svg * {
    stroke: rgb(109, 108, 108);
}


/* cypd notification */

#g__cypd_notify_window {
    position: fixed;
    display: flex;
    flex-flow: column-reverse;
    flex-direction: column-reverse;
    margin-right: 10px;
    right: 0;
    bottom: 0;
    width: 350px;
    z-index: 51;
}

#g__cypd_notify_window>.cypd-notify-wrapper {
    overflow: hidden;
    margin-bottom: 10px;
    max-height: 90px;
    box-shadow: 0px 0px 12px -2px rgb(139, 139, 139);
    transition: max-height .2s cubic-bezier(0.215, 0.610, 0.355, 1), margin-bottom 0s cubic-bezier(0.215, 0.610, 0.355, 1) .1s;
    animation: PushIn 500ms cubic-bezier(0.215, 0.610, 0.355, 1);
}

#g__cypd_notify_window>.cypd-notify-wrapper.hide {
    margin-bottom: 0px;
    max-height: 0px;
}

@keyframes PushIn {
    0% {
        transform: translateX(150%);
    }
    100% {
        transform: none;
    }
}

@keyframes PushOut {
    0% {
        transform: scaleY(1);
    }
    100% {
        transform: scaleY(0);
    }
}

#g__cypd_notify_window .cypd-notify-container {
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    padding: 10px 10px 10px 15px;
    border-radius: 5px;
    background-color: white;
}

#g__cypd_notify_window .cypd-notify-container.info {
    border-left: 5px solid #00839E;
}

#g__cypd_notify_window .cypd-notify-container.success {
    border-left: 5px solid #2fdc17;
}

#g__cypd_notify_window .cypd-notify-container.warning {
    border-left: 5px solid #ff9b02;
}

#g__cypd_notify_window .cypd-notify-container.error {
    border-left: 5px solid #a01f48;
}
/* ... */

